--- a/client_config.properties
+++ b/client_config.properties
@@ -1,6 +1,6 @@
-maxThreads=16
-numSkiers=1000
-numLifts=5
+maxThreads=256
+numSkiers=20000
+numLifts=40
 resortName=silverMt
 skiDay=10
-hostServerAddress=http://localhost:8080/
+hostServerAddress=http://ec2-18-236-236-150.us-west-2.compute.amazonaws.com:8080/SkiServerWar
