working client with 512 threads

--- a/client_config.properties
+++ b/client_config.properties
@@ -1,6 +1,7 @@
-maxThreads=64
+maxThreads=512
 numSkiers=20000
 numLifts=40
 resortName=silverMt
 skiDay=10
-hostServerAddress=http://ec2-18-236-236-150.us-west-2.compute.amazonaws.com:8080/SkiServerWar
+#hostServerAddress=http://localhost:8080
+hostServerAddress=http://AssnTwo-1331396815.us-west-2.elb.amazonaws.com:8080/SkiServerWar
